Replace pie_bike_status.html

--- a/Data visualization/pie_bike_status.html
+++ b/Data visualization/pie_bike_status.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="30384d1d2f3b46ea9857d91d4e6525ac" class="chart-container" style="width:1600px; height:800px;"></div>
+    <div id="5c0123c4775e4e268089a9f41d3fc18a" class="chart-container" style="width:1600px; height:800px;"></div>
     <script>
-        var chart_30384d1d2f3b46ea9857d91d4e6525ac = echarts.init(
-            document.getElementById('30384d1d2f3b46ea9857d91d4e6525ac'), 'white', {renderer: 'canvas'});
-        var option_30384d1d2f3b46ea9857d91d4e6525ac = {
+        var chart_5c0123c4775e4e268089a9f41d3fc18a = echarts.init(
+            document.getElementById('5c0123c4775e4e268089a9f41d3fc18a'), 'white', {renderer: 'canvas'});
+        var option_5c0123c4775e4e268089a9f41d3fc18a = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -54,19 +54,23 @@
             "data": [
                 {
                     "name": "A",
-                    "value": 137
+                    "value": 62
                 },
                 {
                     "name": "B",
-                    "value": 101
+                    "value": 111
                 },
                 {
                     "name": "C",
-                    "value": 126
+                    "value": 112
                 },
                 {
                     "name": "D",
-                    "value": 136
+                    "value": 94
+                },
+                {
+                    "name": "E",
+                    "value": 121
                 }
             ],
             "radius": [
@@ -114,23 +118,23 @@
             "data": [
                 {
                     "name": "A_good",
-                    "value": 134
+                    "value": 58
                 },
                 {
                     "name": "A_broken",
-                    "value": 3
+                    "value": 4
                 },
                 {
                     "name": "B_good",
-                    "value": 99
+                    "value": 105
                 },
                 {
                     "name": "B_broken",
-                    "value": 2
+                    "value": 6
                 },
                 {
                     "name": "C_good",
-                    "value": 118
+                    "value": 104
                 },
                 {
                     "name": "C_broken",
@@ -138,11 +142,19 @@
                 },
                 {
                     "name": "D_good",
-                    "value": 130
+                    "value": 91
                 },
                 {
                     "name": "D_broken",
-                    "value": 6
+                    "value": 3
+                },
+                {
+                    "name": "E_good",
+                    "value": 113
+                },
+                {
+                    "name": "E_broken",
+                    "value": 8
                 }
             ],
             "radius": [
@@ -234,6 +246,7 @@
                 "B",
                 "C",
                 "D",
+                "E",
                 "A_good",
                 "A_broken",
                 "B_good",
@@ -241,7 +254,9 @@
                 "C_good",
                 "C_broken",
                 "D_good",
-                "D_broken"
+                "D_broken",
+                "E_good",
+                "E_broken"
             ],
             "selected": {},
             "show": true,
@@ -277,7 +292,7 @@
         }
     ]
 };
-        chart_30384d1d2f3b46ea9857d91d4e6525ac.setOption(option_30384d1d2f3b46ea9857d91d4e6525ac);
+        chart_5c0123c4775e4e268089a9f41d3fc18a.setOption(option_5c0123c4775e4e268089a9f41d3fc18a);
     </script>
 </body>
 </html>
